--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -4,23 +4,26 @@
             <div class="row justify-content-center">
                 <div class="col-xl-12">
                     <div class="bg__text">
-                        <p class="bg__text__head">АЦ НАКС Стандарт-Диагностика</p>
-                        <p class="bg__text__small">Центр осуществляет аттестационную деятельность в рамках Системы
-                            аттестации сварочного производства <br> Ростехнадзора (САСв Ростехнадзора), независимую
-                            оценку
-                            квалификации в области сварки, а также оказывает <br> услуги по неразрушающему контролю,
+                        <p class="bg__text__head">Группа компаний "Стандарт Диагностика"</p>
+                        <p class="bg__text__small">Аттестационный центр ООО "НАКС Стандарт Диагностика" осуществляет аттестационную деятельность в рамках Системы
+                            аттестации сварочного производства Ростехнадзора (САСв Ростехнадзора), независимую
+                            оценку квалификации в области сварки, а также оказывает услуги по неразрушающему контролю,
                             диагностике, разрушающим и другим видам испытаний</p>
-                        <p class="bg__text__naks">Организация является членом <br> Саморегулируемая
+                        <p class="bg__text__naks">ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемая
                             организация Ассоциация «НАКС».</p>
                         <p class="naks__web">
                             <a href="http://www.naks.ru"  target="_blank" title="Национальное Агентство Контроля Сварки">www.naks.ru
                                 &nbsp | &nbsp </a>
                             <a href="http://www.spks.naks.ru" target="_blank" title="Совет по профессиональным квалификациям в области сварки">www.spks.naks.ru</a>
                         </p>
+                        <p class="bg__text__small">АНО ДПО "Стандарт-Диагностика"  реализует программы дополнительного профессионального образования,
+                        программы профессионального обучения и переподготовки (программы профессиональной подготовки по профессиям рабочих,
+                        должностям служащих; программы переподготовки рабочих, служащих; программы повышения квалификации рабочих, служащих),
+                        дополнительные профессиональные образовательные программы повышения квалификации в соответствии с
+                        Федеральным законом от 29 декабря 2012 г. N 273-ФЗ «Об образовании в Российской Федерации»</p>
 
                         <div class="online__zayavka__button">
-                            <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Подать
-                                заявку</button>
+                            <button class="button__zayavka" data-toggle="modal" data-target="#modal-statement">Заявка на услуги</button>
                         </div>
                     </div>
                 </div>
