--- a/mainapp/templates/mainapp/includes/modal-window.html
+++ b/mainapp/templates/mainapp/includes/modal-window.html
@@ -5,11 +5,11 @@
         <div class="modal-content">
 
             <div class="modal-header">
-                <h5 class="modal-title" id="">Оставить заявку <br> на аттестацию</h5>
+                <h5 class="modal-title" id="">Оставить заявку</h5>
                 <div class="row">
                     <div class="col col-sm-10 col-xl-6">
-                        <p class="modal__title__small__text">Введите свои контактные данные, выберите одну или несколько заявок
-                            для прохождения аттестации, и наш специалист свяжется с вами в ближайшее время.
+                        <p class="modal__title__small__text">Введите свои контактные данные, выберите направление деятельности
+                        группы компаний и наш специалист свяжется с вами в ближайшее время.
                         </p>
                     </div>
                 </div>
