--- a/mainapp/templates/mainapp/includes/services_menu.html
+++ b/mainapp/templates/mainapp/includes/services_menu.html
@@ -25,9 +25,27 @@
                     </div>
                     <div class="col-md-6 col-xl-12">
                         <div class="button__services">
+                            <a href="{% link_holder 'UCHEBNIY_CENTR' %}">
+                                <div class="box__service">
+                                    <p class="services__name">{% title_holder 'UCHEBNIY_CENTR' %}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-12">
+                        <div class="button__services">
                             <a href="{% link_holder 'ATTST' %}">
                                 <div class="box__service">
                                     <p class="services__name">{% title_holder 'ATTST' %}</p>
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-xl-6">
+                        <div class="button__services">
+                            <a href="{% link_holder 'ATTSO' %}">
+                                <div class="box__service">
+                                    <p class="services__name">{% title_holder 'ATTSO' %}</p>
                                 </div>
                             </a>
                         </div>
@@ -41,14 +59,4 @@
                             </a>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-6">
-                        <div class="button__services">
-                            <a href="{% link_holder 'ATTSO' %}">
-                                <div class="box__service">
-                                    <p class="services__name">{% title_holder 'ATTST' %}</p>
-                                </div>
-                            </a>
-                        </div>
-                    </div>
                 </div>
-            
