--- a/mainapp/templates/mainapp/contact.html
+++ b/mainapp/templates/mainapp/contact.html
@@ -1,7 +1,7 @@
 {% extends 'mainapp/base.html' %}
 {% load static %}
 {% block content %}
-  <div class="container">
+  <div class="container" id="page-top">
 
     <button class="back__to__main">
       <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center" alt="">
@@ -13,13 +13,14 @@
       <div class="col-xl-2">
         <div class="header__inside__pages">Контакты</div>
       </div>
-      <div class="col-xl-5"> 
-          <p class="header__doc">Контакты аттестационного центра СУР - 22АЦ</p>       
-      <p class="contact__header__pages">     
+      <div class="col-xl-10">
+          <p class="header__doc">Группа компаний "Стандарт Диагностика"</p>
+          <p class="header__doc">Аттестационный центр ООО "НАКС Стандарт Диагностика"</p>
+      <p class="contact__header__pages">
        </div>
     </div>
     <div class="row">
-        <div class="col-xl-2">            
+        <div class="col-xl-2">
         </div>
         <div class="col-xl-3">
                 <p class="contact__header__pages">Телефоны
@@ -39,16 +40,16 @@
                 <p class="email__text__footer">Лаборатория неразрушающих и разрушающих методов контроля.</p>
                 <a href="mailto:sdiag@diagmag.ru" class="email__link__footer">sdiag@diagmag.ru</a>
                 <p class="email__text__footer">Аттестация сварочных материалов,
-                    и сварочного оборудования.</p>              
-            </div> 
+                    и сварочного оборудования.</p>
+            </div>
         </div>
 
         <div class="col-xl-4">
                 <p class="contact__header__pages">Адрес
                     </p>
                     <p class="adres__ac">
-                            г. Магнитогорск 
-                            Профсоюзная, дом 14, офис 111 
+                            г. Магнитогорск
+                            Профсоюзная, дом 14, офис 111
                     </p>
                     <p class="contact__header__pages">
                             Наше местоположение
@@ -57,6 +58,38 @@
                                 <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ad62703690dc8660795097690647db22fb307a8230a1ddd42ed5d2eb25db377d1&amp;width=737&amp;height=497&amp;lang=ru_RU&amp;scroll=true"></script>
                              </div>
         </div>
+    </div>
+
+      <div class="row">
+        <div class="offset-xl-2 col-xl-6">
+          <p class="contact__header__pages">Контакты учебно-курсового центра</p>
+          <p class="header__doc">АНО ДПО «Стандарт – Диагностика»</p>
+          <p> Учебно-курсовой центр</p>
+        </div>
+      </div>
+    <div class="row">
+      <div class="offset-xl-2 col-xl-5">
+      <p class="adres__ac">455019, г. Магнитогорск, Челябинская обл., ул. Профсоюзная, 14 (1 этаж)</p>
+      <p class="email__text__footer">
+        E-mail: <a href="mailto:ukc@diagmag.ru" class="email__link__footer">ukc@diagmag.ru</a>
+      </p>
+      </div>
+      <div class="col-xl-5">
+
+        <p class="adres__ac">
+          Телефон (3519) 58-09-33 (многоканальный)
+        </p>
+
+      <div class="email__text__footer">
+        - Посадская Татьяна Семеновна (оф.112) (доб. тел. 402)
+      </div>
+      <div class="email__text__footer">
+        - Жаворонкова Елена Николаевна (оф. 109) (доб. тел. 404)
+      </div>
+      <p class="email__text__footer">
+        - Молчанова Наталья Николаевна (оф. 102) (доб. тел. 405)
+      </p>
+      </div>
     </div>
 
 
