--- a/mainapp/templates/mainapp/includes/laboratoriya.html
+++ b/mainapp/templates/mainapp/includes/laboratoriya.html
@@ -3,7 +3,7 @@
 {% load link_holders %}
 {% block content %}
 
-    <div class="container">
+    <div class="container" id="page-top">
 
         <button class="back__to__main">
             <a href="{% url 'main' %}"> <img src="{% static 'img/back__arrow-01.png' %}" class="arrow__back__to__main text-align-center"
@@ -168,7 +168,7 @@
 
             <div class="col-xl-2">
 
-               {% include 'mainapp/includes/side_panel_links.html' %} 
+               {% include 'mainapp/includes/side_panel_links.html' %}
             </div>
 
         </div>
