--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -7,13 +7,11 @@
 
             <div class="col-xl-7">
                 <div class="header__name">
-                    <p class="">Центр Аттестации</p>
+                    <p class="">Аттестационный центр НАКС</p>
                 </div>
                 <div class="content__text__info__box">
                     <p class="text__medium">
-                        Общество с ограниченной ответственностью Аттестационный и сертификационный центр «Инженерный и
-                        технологический сервис сварочного производства» (ООО АЦ «НАКС Стандарт-Диагностик», г. Москва,
-                        далее Центр) проводит:
+                        Общество с ограниченной ответственностью ООО «НАКС Стандарт-Диагностика» осуществляет деятельность по аттестации сварочного производства:
                     </p>
                     <div class="box__info__text__small">
                         <p class="info__text__small">
@@ -28,37 +26,37 @@
                             Аттестация сварочных материалов согласно требованиям <a data-info="RD_613" href="{% doc_holder 'RD_613' %}">РД 03-613-03;</a>
                         </p>
                         <p class="info__text__small">
-                            Аттестация сварочного оборудования согласно требованиям <a data-info="RD_614" href="{% doc_holder 'RD_495' %}">РД 03-614-03;</a>
+                            Аттестация сварочного оборудования согласно требованиям <a data-info="RD_614" href="{% doc_holder 'RD_614' %}">РД 03-614-03;</a>
                         </p>
                         <p class="info__text__small">
                             Услуги испытательной лаборатории неразрушающего и разрушающих методов контроля.
                         </p>
                     </div>
                     <p class="header__name__small">
-                        Аттестаты соответствия
+                        Разрешительные документы
                     </p>
                     <main role="main">
                         <p class="imglist d-flex">
-                            <a href="{% static 'img/img_at.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/sur_22_ac_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/sur_22_ac_min.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/sur_3csp_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/sur_3csp_min.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/acsm_62_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/acsm_62_min.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/acso_114_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/acso_114_min.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/acst_132_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/acst_132_min.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/dopusk_st_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/dopusk_st_min.jpg' %}" class="img-fluid">
                             </a>
-                            <a href="{% static 'img/img_at2.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
-                                <img src="{% static 'img/img_at2.jpg' %}" class="img-fluid">
+                            <a href="{% static 'img/IL_max.jpg' %}" class="img_box" data-fancybox="group1" data-type="image">
+                                <img src="{% static 'img/IL_min.jpg' %}" class="img-fluid">
                             </a>
                         </p>
                     </main>
