--- a/mainapp/templates/mainapp/includes/header.html
+++ b/mainapp/templates/mainapp/includes/header.html
@@ -4,7 +4,7 @@
         <div class="row align-items-center">
                 <div class="col-md-5 col-sm-5 col-xl-3">
                         <a href="{% url 'main' %}">
-                                <img src="{% static 'img/logo.png' %}" class="header__logo" alt="">
+                                <img src="{% static 'img/logo_ac.png' %}" class="header__logo" alt="">
                         </a>
                 </div>
                 <div class="col-md-3 col-sm-4 col-xl-2">
@@ -47,9 +47,9 @@
                                                         Организация допущена <br>
                                                         к выполнению работ по аттестации <br>
                                                         сварочного производства</p>
-                                </div>                     
+                                </div>
                 </div>
-                
+
 
                </div>
 
