--- a/assets/scss/_legacy.scss
+++ b/assets/scss/_legacy.scss
@@ -389,7 +389,7 @@ body {
 .link__read__more a {
     text-decoration: none;
     font-size: 16px;
-    color: #0066ac;    
+    color: #0066ac;
 }
 
 
@@ -443,7 +443,7 @@ body {
     text-decoration: none;
     font-size: 14px;
     color: #0066ac;
-    font-weight: 450;   
+    font-weight: 450;
 }
 
 .block__news a {
@@ -707,7 +707,7 @@ body {
 
 }
 
-// 
+//
 
 .spks__footer a {
     text-decoration: none;
@@ -1461,7 +1461,7 @@ input[type=file] {
 }
 
 .ya__map {
-    margin-bottom: 25px;    
+    margin-bottom: 25px;
 }
 
 // Новости (внутри)
@@ -1480,6 +1480,7 @@ input[type=file] {
 }
 
 .small__text__news{
+    max-width: 90%;
     font-size: 16px;
     font-weight: 400;
     color: #000;
@@ -1494,7 +1495,7 @@ input[type=file] {
 
 .news__tag__all-news a{
     font-size: 14px;
-    margin-top: 25px;  
+    margin-top: 25px;
     background-color: transparent;
     border-radius: 55px;
     border: 1px solid #3164a2;
@@ -1512,7 +1513,7 @@ input[type=file] {
     color: #2e3e60;
     font-size: 14px;
     border-radius: 0px;
-    
+
 }
 
 .page-item {
@@ -1587,7 +1588,7 @@ margin-bottom: 25px;
 .line__news__end{
     border: 0.5px solid #ebebeb;
     margin-top: 25px;
-    margin-bottom: 25px;    
+    margin-bottom: 25px;
 }
 .prikrep__doc{
     font-size: 14px;
@@ -1597,11 +1598,11 @@ margin-bottom: 25px;
 
 .soglashenie__button {
     background-color: transparent;
-    border: none;   
-    padding: 0;   
+    border: none;
+    padding: 0;
     a{
         text-decoration: none;
-    }   
+    }
 }
 
 .soglashenie__button__text {
@@ -1611,7 +1612,7 @@ margin-bottom: 25px;
     font-size: 14px;
     color: #8d8d8d;
     border-radius: 3px;
-  
+
     &:hover{
         color: #585858;
     }
@@ -1657,6 +1658,10 @@ margin-bottom: 25px;
     }
 }
 
+.box__news__inside {
+    white-space: normal;
+}
+
 .header__all__news{
     font-size: 18px;
     font-weight: 300;
@@ -1678,7 +1683,7 @@ margin-bottom: 25px;
     text-decoration: none;
     font-size: 14px;
     color: #0066ac;
-    font-weight: 450;   
+    font-weight: 450;
 }
 
 
@@ -1687,7 +1692,7 @@ margin-bottom: 25px;
     color: #2e3e60;
     font-size: 14px;
     border-radius: 0px;
-    
+
 }
 
 .page-item {
