--- a/assets/scss/_menu__burger.scss
+++ b/assets/scss/_menu__burger.scss
@@ -4,7 +4,7 @@
     padding: 20px 35px 20px 35px;
     border-top: 1px solid #f5f5f5;
     // border-radius: 7px;
-    margin-bottom: 25px;    
+    // margin-bottom: 25px;
 
     @media screen and (max-width: 992px) {
         padding: 15px;
@@ -20,7 +20,7 @@
 
 .menu__navbar ul {
     color: #fff;
-    font-size: 14px;    
+    font-size: 14px;
     text-transform: uppercase;
     justify-content: space-between;
     @media screen and (max-width: 992px) {
@@ -45,7 +45,7 @@
 }
 
 .menu__navbar .navbar-expand-lg .navbar-nav .nav-link {
-    // padding: 0; 
+    // padding: 0;
     margin-right: 35px;
 
 }
@@ -60,7 +60,7 @@
     box-shadow: 0 2px 18px rgba(0, 0, 0, 0.09);
     border: none;
     border-radius: 0px;
-    text-transform: initial;   
+    text-transform: initial;
     padding: 12px;
        @media screen and (max-width: 320px) {
         font-size: 14px;
