--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -465,7 +465,7 @@ input[type=file] { border: none; }
 
 .img__box__news { margin-top: 15px; margin-bottom: 25px; }
 
-.small__text__news { font-size: 16px; font-weight: 400; color: #000; margin-top: 15px; line-height: 1.8; }
+.small__text__news { max-width: 90%; font-size: 16px; font-weight: 400; color: #000; margin-top: 15px; line-height: 1.8; }
 
 .news__tag__all-news { margin-top: 25px; margin-bottom: 10px; }
 
@@ -529,6 +529,8 @@ input[type=file] { border: none; }
 
 @media screen and (max-width: 320px) { .box__news__inside__block { padding: 15px; } }
 
+.box__news__inside { white-space: normal; }
+
 .header__all__news { font-size: 18px; font-weight: 300; margin-top: 25px; }
 
 .line__otstup__inside__pages__news { margin-top: 25px; margin-bottom: 25px; }
@@ -545,7 +547,7 @@ input[type=file] { border: none; }
 
 .page-link:focus { outline: none; box-shadow: none; }
 
-.menu__background { background-color: #373c41; padding: 20px 35px 20px 35px; border-top: 1px solid #f5f5f5; margin-bottom: 25px; }
+.menu__background { background-color: #373c41; padding: 20px 35px 20px 35px; border-top: 1px solid #f5f5f5; }
 
 @media screen and (max-width: 992px) { .menu__background { padding: 15px; } }
 
@@ -792,5 +794,13 @@ button:focus { outline: none; }
 .date__po__mob { display: none; }
 
 @media screen and (max-width: 1199px) { .date__po__mob { display: block; } }
+
+.sub-dropdown-right:active, .sub-dropdown-right:focus, .sub-dropdown-right:hover > .sub-dropdown-menu { display: block; }
+
+@media screen and (max-width: 600px) { .sub-dropdown-menu { max-width: 90%; } }
+
+.sub-dropdown-right { display: block; width: 100%; padding: 0.25rem 0.8rem; clear: both; font-weight: 400; color: #212529; text-align: inherit; white-space: nowrap; background-color: transparent; border: 0; line-height: 40px; }
+
+.sub-dropdown-right:hover { color: #16181b; text-decoration: none; background-color: #f8f9fa; }
 
 /*# sourceMappingURL=style.css.map */
