--- a/mainapp/templates/mainapp/post_details.html
+++ b/mainapp/templates/mainapp/post_details.html
@@ -57,12 +57,14 @@
                     </p>
                     <div class="line__news__end"></div>
                     <p class="prikrep__doc">Прикрепленные файлы:</p>
+                    {% if documents %}
                     {% for document in documents %}
                     <button class="soglashenie__button">
                         <a href="{{ document.document.url }}" class="soglashenie__button__text" target="_blank">
                             <img src="{% static 'img/download__icon.png' %}" alt="download" class="download__icon">{{ document.title }}</a>
                     </button>
                     {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
@@ -72,9 +74,9 @@
     <div class="row">
         <div class="col-xl-2">
         </div>
-        <div class="col-xl-2">
+        <div class="col-xl-4">
             <p class="header__all__news">
-                Другие новости
+                Может быть полезным:
             </p>
         </div>
     </div>
@@ -82,7 +84,7 @@
         <div class="col-xl-2"></div>
         <div class="col-xl-4">
             <div class="block__news">
-                <a href="{% url 'detailview' 'post' bottom_related.0.pk %}" class="link__news">
+                <a href="{% url 'detailview' 'post' bottom_related.0.pk %}#page-top" class="link__news">
                     <div class="box__news">
                         <p class="data__news__main">{{ bottom_related.0.published_date }}</p>
                         <p class="box__news__text">
@@ -92,7 +94,7 @@
             </div>
             <div class="line__otstup__inside__pages"></div>
             <div class="block__news">
-                <a href="{% url 'detailview' 'post' bottom_related.1.pk %}" class="link__news">
+                <a href="{% url 'detailview' 'post' bottom_related.1.pk %}#page-top" class="link__news">
                     <div class="box__news">
                         <p class="data__news__main">{{ bottom_related.1.published_date }}</p>
                         <p class="box__news__text">
@@ -103,7 +105,7 @@
         </div>
         <div class="col-xl-4">
             <div class="block__news">
-                <a href="{% url 'detailview' 'post' bottom_related.2.pk %}" class="link__news">
+                <a href="{% url 'detailview' 'post' bottom_related.2.pk %}#page-top" class="link__news">
                     <div class="box__news">
                         <p class="data__news__main">{{ bottom_related.2.published_date }}</p>
                         <p class="box__news__text">
@@ -113,7 +115,7 @@
             </div>
             <div class="line__otstup__inside__pages"></div>
             <div class="block__news">
-                <a href="{% url 'detailview' 'post' bottom_related.3.pk %}" class="link__news">
+                <a href="{% url 'detailview' 'post' bottom_related.3.pk %}#page-top" class="link__news">
                     <div class="box__news">
                         <p class="data__news__main">{{ bottom_related.3.published_date }}</p>
                         <p class="box__news__text">
