add lab documents link

--- a/mainapp/templates/mainapp/includes/menu.html
+++ b/mainapp/templates/mainapp/includes/menu.html
@@ -80,9 +80,9 @@
                   <a class="nav__link__two dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown"
                     aria-haspopup="true" aria-expanded="false">Документы</a>
                   <div class="dropdown-menu dropdown-primary" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Документы ООО "НАКС Стандарт-Диагностика"</a>
-                    <a class="dropdown-item" href="#">Документы АНО ДПО "Стандарт-ДиагностикаЙ</a>
-                    <a class="dropdown-item" href="#">Документы лаборатории разрушающего <br>
+                    <a class="dropdown-item" href="{% url 'docs' %}#ac_stdiag">Документы ООО "НАКС Стандарт-Диагностика"</a>
+                    <a class="dropdown-item" href="{% url 'docs' %}#ano_dpo_stdiag">Документы АНО ДПО "Стандарт-ДиагностикаЙ</a>
+                    <a class="dropdown-item" href="{% url 'docs' %}#lab_stdiag">Документы лаборатории разрушающего <br>
                       и неразрушающего контроля</a>
                   </div>
                 </li>
