--- a/mainapp/templates/mainapp/doc_new.html
+++ b/mainapp/templates/mainapp/doc_new.html
@@ -17,7 +17,7 @@
       </div>
       <div class="col-xl-7">
              <div class="col-12">
-        <p class="header__doc">Список документов СУР - 22АЦ</p>
+        <p class="header__doc" id="ac_stdiag">Список документов СУР - 22АЦ</p>
         <p class="doc__name__list">Наименование документов</p>
         {% for doc in sur_22ac_list %}
         <a href="{{ doc.document.url }}" download="">
@@ -61,9 +61,20 @@
         {% endfor %}
       </div>
       <div class="col-12">
-        <p class="header__doc">Список документов АНО ДПО "Стандарт-Диагностика"</p>
+        <p class="header__doc" id="ano_dpo_stdiag">Список документов АНО ДПО "Стандарт-Диагностика"</p>
         <p class="doc__name__list">Наименование документов</p>
         {% for doc in ano_dpo_list %}
+        <a href="{{ doc.document.url }}" download="">
+          <div class="doc__content">
+            <p class="doc__name">{{ doc.title }}</p>
+          </div>
+        </a>
+        {% endfor %}
+      </div>
+      <div class="col-12">
+        <p class="header__doc" id="lab_stdiag">Документы испытательная лаборатория "Стандарт-Диагностика"</p>
+        <p class="doc__name__list">Наименование документов</p>
+        {% for doc in lab_list %}
         <a href="{{ doc.document.url }}" download="">
           <div class="doc__content">
             <p class="doc__name">{{ doc.title }}</p>
