some changes with trello tasks

--- a/mainapp/templates/mainapp/includes/background-block.html
+++ b/mainapp/templates/mainapp/includes/background-block.html
@@ -9,8 +9,8 @@
                             аттестации сварочного производства Ростехнадзора (САСв Ростехнадзора), независимую
                             оценку квалификации в области сварки, а также оказывает услуги по неразрушающему контролю,
                             диагностике, разрушающим и другим видам испытаний</p>
-                        <p class="bg__text__naks">ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемая
-                            организация Ассоциация «НАКС».</p>
+                        <p class="bg__text__naks">ООО "НАКС Стандарт Диагностика" является членом <br> Саморегулируемой
+                            организации Ассоциация «НАКС».</p>
                         <p class="naks__web">
                             <a href="http://www.naks.ru"  target="_blank" title="Национальное Агентство Контроля Сварки">www.naks.ru
                                 &nbsp | &nbsp </a>
