--- a/mainapp/templates/mainapp/includes/content.html
+++ b/mainapp/templates/mainapp/includes/content.html
@@ -115,7 +115,7 @@
                     <div class="naks__info__box">
                         <p class="naks__text__box">Национальное Агентство <br>
                             Контроля Сварки</p>
-                        <a href="">
+                        <a href="http://naks.ru" target="_blank">
                             <p class="naks__text__box">www.naks.ru</p>
                         </a>
                     </div>
