--- a/mainapp/templates/mainapp/includes/footer.html
+++ b/mainapp/templates/mainapp/includes/footer.html
@@ -8,7 +8,7 @@
                     <img src="{% static 'img/logo_footer.png' %}" alt="">
                 </div>
                 <p class="footer__naks__text">
-                    Организация является членом Саморегулируемая <br> организация Ассоциация «НАКС».
+                    Организация является членом Саморегулируемой <br> организации Ассоциация «НАКС».
                 </p>
                 <div class="sasp__grey__logo">
                 </div>
