--- a/mainapp/templates/mainapp/includes/services_menu.html
+++ b/mainapp/templates/mainapp/includes/services_menu.html
@@ -5,7 +5,7 @@
                 <div class="row">
                     <div class="col-md-6 col-xl-12">
                         <div class="button__services">
-                            <a href="{% url 'attsv' %}">
+                            <a href="{% url 'attsv' %}#page-top">
                                 <div class="box__service">
                                     <p class="services__name">Аттестация сварщиков <br>
                                         и специалистов сварочного производства</p>
