--- a/mainapp/templates/mainapp/includes/side_panel_links.html
+++ b/mainapp/templates/mainapp/includes/side_panel_links.html
@@ -15,7 +15,7 @@
                         Подать заявку на аттестацию:
                     </p>
                     <div class="list__service__column">
-                        <p class="small__column__text"><a href="{% url 'attsv' %}"> Аттестация сварщиков
+                        <p class="small__column__text"><a href="{% url 'attsv' %}#page-top"> Аттестация сварщиков
                                 и специалистов сварочного производства</a></p>
                         <p class="small__column__text"><a href="{% url 'lab' %}"> Лаборатория разрушающего
                                 и неразрушающего контроля</a></p>
