add anchors to side panel

--- a/mainapp/templates/mainapp/doc_new.html
+++ b/mainapp/templates/mainapp/doc_new.html
@@ -108,19 +108,19 @@
               сварочного производства</a>
           </p>
           <p class="small__column__text">
-            <a href="{% url 'lab' %}"> Лаборатория разрушающего и неразрушающего контроля</a>
+            <a href="{% url 'lab' %}#page-top"> Лаборатория разрушающего и неразрушающего контроля</a>
           </p>
           <p class="small__column__text">
-            <a href="{% link_holder 'ATTST' %}"> {% title_holder 'ATTST' %} </a>
+            <a href="{% link_holder 'ATTST' %}#page-top"> {% title_holder 'ATTST' %} </a>
           </p>
           <p class="small__column__text">
-            <a href="{% link_holder 'ATTSO' %}"> {% title_holder 'ATTSO' %} </a>
+            <a href="{% link_holder 'ATTSO' %}#page-top"> {% title_holder 'ATTSO' %} </a>
           </p>
           <p class="small__column__text">
-            <a href="{% link_holder 'ATTSM' %}"> {% title_holder 'ATTSM' %} </a>
+            <a href="{% link_holder 'ATTSM' %}#page-top"> {% title_holder 'ATTSM' %} </a>
           </p>
           <p class="small__column__text">
-            <a href="{% link_holder 'UCHEBNIY_CENTR' %}">{% title_holder 'UCHEBNIY_CENTR' %}</a>
+            <a href="{% link_holder 'UCHEBNIY_CENTR' %}#page-top">{% title_holder 'UCHEBNIY_CENTR' %}</a>
           </p>
         </div>
       </div>
